<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/activity_login_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/activity_login_tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/activity_login_et_email"
                android:hint="@string/email"
                android:text="ranjan@gmail.com"
                android:paddingLeft="20dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:maxLines="1"/>


            <TextView
                android:id="@+id/activity_login_tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/activity_login_et_password"
                android:hint="@string/password"
                android:text="admin123"
                android:paddingLeft="20dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:maxLines="1"/>
            
            <TextView
                android:id="@+id/activity_login_tv_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/forget_password"
                android:gravity="right"/>

            <Button
                android:id="@+id/activity_login_btn_login"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/button_effect1"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/activity_login_register_option"
                android:text="@string/dont_have_account_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="50dp"/>

            <Button
                android:id="@+id/activity_login_btn_signup"
                android:text="@string/sign_up"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_effect"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>