<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/activity_sing_up_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/activity_sing_up_tv_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/activity_sing_up_et_first_name"
        android:hint="@string/first_name"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/activity_sing_up_tv_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/activity_sing_up_et_last_name"
        android:hint="@string/last_name"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/activity_sing_up_tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/activity_sing_up_et_email"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLines="1"/>


    <TextView
        android:id="@+id/activity_sing_up_tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/activity_sing_up_et_password"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLines="1"/>


    <TextView
        android:id="@+id/activity_sing_up_tv_re_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/re_type_password"
        android:textSize="20sp"
        android:layout_marginBottom="9dp"/>

    <EditText
        android:id="@+id/activity_sing_up_et_re_type"
        android:hint="@string/re_type_password"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/activity_sing_up_btn_sign_up"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/button_effect1"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>